--- a/connect/src/Rdashboard.css
+++ b/connect/src/Rdashboard.css
@@ -26,7 +26,7 @@
 .ifn{
     margin-left: 8%; 
     margin-right: 8%;
-    line-height: 15px;
+    line-height: 28px;
     font-size: 20px;
     
     
@@ -45,3 +45,44 @@
     border-bottom-style: none;
     border-right-style: none;
 }
+
+
+@media(max-width: 1326px){
+    .ifn1{
+        font-size: 18px;
+    }
+     
+ }
+ 
+ @media(max-width: 1218px){
+     .ifn1{
+         font-size: 18px;
+     }
+      
+  }
+ 
+  @media(max-width: 978px){
+     .ifn1{
+         font-size: 20px;
+     }
+      
+  }
+ 
+  @media(max-width: 774px){
+     .ifn1{
+         font-size: 18px;
+     }
+      
+  }
+  @media(max-width: 598px){
+     .ifn1{
+         font-size: 15px;
+     }
+      
+  }
+  @media(max-width: 371px){
+     .ifn1{
+         font-size: 13px;
+     }
+      
+  }
