--- a/connect/src/preview.css
+++ b/connect/src/preview.css
@@ -28,7 +28,7 @@
     font-size: 22px;
     padding-right: 8%;
     /* width: 84%; */
-    line-height: 2px;
+    line-height: 27px;
 
 }
 #pln{
@@ -36,5 +36,31 @@
     font-size: 22px;
     padding-right: 8%;
     padding-left: 8%;
-    line-height: 2px;
+    line-height: 27px;
+}
+
+#epln{
+    /* width: 84%; */
+    font-size: 22px;
+    padding-right: 8%;
+    padding-left: 8%;
+    line-height: 27px;
+}
+
+@media(max-width: 690px){
+    #epln{
+        font-size: 17px
+    }
+}
+
+@media(max-width: 450px){
+    #epln{
+        font-size: 14px
+    }
+    .ph4{
+        font-size: 19px;
+    }
+    .ph3{
+        font-size: 22px;
+    }
 }
