--- a/connect/src/requiter.css
+++ b/connect/src/requiter.css
@@ -22,17 +22,18 @@
     clear: right;
   }
 
-  .mainContainer{
+  .mainContainer2{
+    display: block;
     float: left;
     width: 20%;
-    border: 30px solid white;
+    
     height:700px;
     background-color: white;
-    box-shadow: 10px 10px 20px white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
     /* border-color: #F2F4F6; */
        
 }
-.content{
+.content2{
     float: left;
     width: 80%;
     
@@ -40,31 +41,47 @@
     
 }
 
-.samerow{
-    /* display:flex;
-    flex-direction:row; */
+.dropdown2{
+    position: relative;
+    /* display: inline-block; */
     display: block;
-    clear: right;
-    background-color: #EEEEEE;
+    
 }
 
-.gtlogo{
+
+.samerow2{
+    /* display:flex;
+    flex-direction:row; */
+    /* display: block;
+    clear: right;
+    background-color: #EEEEEE; */
+}
+
+/* .gtlogo2{
     width: 60%;
     height: 20%;
     border-radius: 100%;
     margin-left: 18%;
     margin-top: 20px;
-}
-.nav{
+} */
+.nav2{
     
-    /* background-color: #EEEEEE; */
     height: 50px;
-    width: 100%;
+    width: 80%;
+    margin-bottom: 30px;
+    text-align: left;
     /* color: #3C4858; */
-    
+    margin-left: 10%;
+    margin-right: 10%;
     border-radius: 5px;
+    /* font-size: 30px; */
     border-bottom-style: none;
     border-right-style: none;
+}
+.name2{
+    padding-top: "10px";
+    color: "green";
+    text-align: center;
     
 }
 hr{
@@ -74,4 +91,72 @@ hr{
     width: 90%;
     
     opacity: 0.5;
+}
+#icon{
+    
+}
+
+
+
+
+@media(max-width: 980px){
+    .mainContainer2{
+    display: none;
+    position: absolute;
+    background-color: white;
+    float: none;
+    width: 35%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    height: 875px;
+    }
+
+    .content2{
+        float: none;
+        width: 100%
+    }
+
+    .dropdown2{
+        display: inline-block;
+    }
+    .nav2{
+        margin-left: 15%;
+        margin-right: 15%;
+        width: 70%
+    }
+    
+    /* .gtlogo{
+        width: 40%;
+        height: 10%;
+    } */
+}
+
+@media(max-width: 790px){
+    .mainContainer2{
+        width: 45%
+    }
+}
+
+@media(max-width: 454px){
+    .nav2{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+
+@media(max-width: 390px){
+    .mainContainer2{
+        width: 50%
+    }
+    
+}
+
+@media(max-width: 350px){
+    .nav2{
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
 }
