--- a/connect/src/search.css
+++ b/connect/src/search.css
@@ -6,14 +6,18 @@
     width: 60%;
     text-align: center;
     height: 50px;
+    margin-top: 40px;
     border-radius: 100px;
     border-top-style: outset;
     border-left-style: outset;
+    padding-left: 1%;
+    padding-right: 1%;
+    font-size: 12px;
 
 
 }
 
-.upload{
+.supload{
     width: 30%;
     margin-right: 35%;
     margin-left: 35%;
@@ -23,4 +27,13 @@
     background-color: rgba(0, 0, 255,0.4);
     border-bottom-style: none;
     border-right-style: none;
+}
+
+@media(max-width: 540px){
+    .supload{
+        width: 45%;
+        margin-left: 27.5%;
+        margin-right: 27.5%;
+        height: 45px
+    }
 }
