--- a/connect/src/userdashboard.css
+++ b/connect/src/userdashboard.css
@@ -22,49 +22,91 @@
     clear: right;
   }
 
-  .mainContainer{
+  .mainContainer1{
+    display: block;  
     float: left;
     width: 20%;
-    border: 30px solid white;
-    height:700px;
+    /* border: 30px solid white; */
+    height:875px;
     background-color: white;
-    box-shadow: 10px 10px 20px white;
-    /* border-color: #F2F4F6; */
-       
-}
-.content{
-    float: left;
-    width: 80%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
     
+    /* border-color: #F2F4F6;*/
+    
+    /* display: none;
+    position: absolute;
+    background-color: white;
+    width: 20%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    height: 700px; */
+
+}
+
+.dropdown{
+    position: relative;
+    /* display: inline-block; */
+    display: block;
+    
+}
+
+
+.content1{
+    float: left;
+    width: 80%;    
     background-color: #EEEEEE
     
 }
 
-.samerow{
+.samerow1{
     /* display:flex;
     flex-direction:row; */
-    display: block;
-    clear: right;
-    background-color: #EEEEEE;
+    /* display: block;
+    clear: right;*/
+    background-color: #EEEEEE; 
 }
 
-.gtlogo{
+/* #gtlogo{
     width: 60%;
-    height: 20%;
+    height: 15%;
+    background-color: #EEEEEE;
+     border: 1px solid #EEEEEE; 
     border-radius: 100%;
     margin-left: 18%;
     margin-top: 20px;
-}
-.nav{
+} */
+
+/* #shield{
+    width: "60%";
+    height: "100px";
+    background-color:"#EEEEEE";
+    margin-left:"18%";
+    border-radius: 100%;
+    margin-top: 20px;
+} */
+
+
+.nav1{
     
     /* background-color: #EEEEEE; */
     height: 50px;
-    width: 100%;
+    width: 80%;
+    margin-bottom: 30px;
+    text-align: left;
     /* color: #3C4858; */
-    
+    margin-left: 10%;
+    margin-right: 10%;
     border-radius: 5px;
+    /* font-size: 30px; */
     border-bottom-style: none;
     border-right-style: none;
+    
+}
+
+.profile{
+    padding-top: "10px";
+    color: "green";
+    text-align: center;
     
 }
 hr{
@@ -74,4 +116,73 @@ hr{
     width: 90%;
     
     opacity: 0.5;
+}
+
+
+
+
+
+
+@media(max-width: 980px){
+    .mainContainer1{
+    display: none;
+    position: absolute;
+    background-color: white;
+    float: none;
+    width: 35%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    height: 875px;
+    }
+
+    .content1{
+        float: none;
+        width: 100%
+    }
+
+    .dropdown{
+        display: inline-block;
+    }
+    .nav1{
+        margin-left: 15%;
+        margin-right: 15%;
+        width: 70%
+    }
+    
+    /* .Gtlogo{
+        margin-left: 30%;
+        width: 60%;
+        height: 30%;
+        
+    } */
+}
+
+@media(max-width: 790px){
+    .mainContainer1{
+        width: 45%
+    }
+}
+
+@media(max-width: 454px){
+    .nav1{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+
+@media(max-width: 390px){
+    .mainContainer1{
+        width: 50%
+    }
+    
+}
+
+@media(max-width: 350px){
+    .nav1{
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
 }
