--- a/connect/src/editProfile.css
+++ b/connect/src/editProfile.css
@@ -90,7 +90,7 @@
     margin-right: 8%;
     margin-left: 8%;
     line-height: 2px;
-    text-align: center;
+    padding-left: 10%;
     height: 50px;
     border-radius: 100px;
     border-top-style: outset;
