--- a/connect/src/compose.css
+++ b/connect/src/compose.css
@@ -11,7 +11,6 @@
 .formBlock{
     
     width: 80%;
-   
     margin-right: 10%;
     margin-left: 10%;
     box-shadow: 10px 10px 20px 5px #aaaaaa;
@@ -31,8 +30,9 @@
     width: 84%;
     margin-right: 8%;
     margin-left: 8%;
-    line-height: 2px;
+    line-height: 22px;
     padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
     height: 70px;
     /* border-radius: 100px; */
@@ -46,7 +46,7 @@
     
     margin-right: 20%;
     margin-left: 20%;
-    
+    line-height: 22px;
     width: 60%;
     text-align: center;
     height: 50px;
